--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "type": "chrome",
             "request": "launch",
             "name": "Open index.html",
-            "file": "c:\\Users\\F3ri\\Desktop\\GitHub\\personal-resume\\index.html"
+            "file": "c:\\Users\\F3ri\\Desktop\\GitHub\\personal-resume\\HTML.html"
         }
     ]
 }
